# genailit

./: .gitignore  README.md  pyproject.toml
examples/: function_agent.py  langgraph_demo.py  sagemaker_quickstart.py  simple_demo.py
src/genailit/: __init__.py  cli.py  core.py  debug.py  events.py  introspection.py  pricing.py  telemetry.py
src/genailit/adapters/: __init__.py  base.py  function.py  langgraph.py
tests/: test_base_adapter.py  test_cli.py  test_core.py  test_debug.py  test_demo_adapter.py  test_events.py  test_imports.py  test_introspection.py  test_langgraph_adapter.py  test_langgraph_demo.py  test_observability.py  test_telemetry.py
